---------------------------------------------------------------------

name:                      savage
version:                   1.0.0
build-type:                Simple
cabal-version:             >= 1.10
category:                  Data
author:                    Daniel Cartwright
maintainer:                dcartwright@layer3com.com
license:                   Apache-2.0
license-file:              LICENSE
homepage:                  https://github.com/chessai/savage
bug-reports:               https://github.com/chessai/savage/issues
synopsis:                  Custom random typeclass.
description:               Custom random typeclass.
extra-source-files:        README.md
tested-with:               GHC == 8.2.1

---------------------------------------------------------------------

source-repository head
    type:                git
    branch:              master
    location:            https://github.com/chessai/savage.git

---------------------------------------------------------------------

library
    hs-source-dirs:        src
    build-depends:         base       >= 4.8 && < 5.0
                         , QuickCheck
    exposed-modules:       Savage
    default-language:      Haskell2010
    other-extensions:      
                        
---------------------------------------------------------------------

